# TE-PAI_shadow_spectroscopy

./: .gitignore  LICENSE  README.md  __init__.py  main.py  post_processing.py  pyproject.toml
Hamiltonian/: Hamiltonian.py  Heisenberg_hamil.py  Ising_hamil.py  Spin_chain_hamil.py  __init__.py
Hardware_simulation/: Hardware.py  ShadowSpectro_Hardware.py  TE_PAI_Shadow_Spectro_Hardware.py  __init__.py  post_process.py  post_process_TE_PAI_Shadow_Hardware.py  submit_circuits.py
Shadow_Spectro/: ClassicalShadow.py  ShadowSpectro.py  Spectroscopy.py  __init__.py
TEST/Hamiltonian/: test_Hamiltonian.py
TEST/Hardware_simulation/: test_Hardware.py
TEST/Shadow_spectroscopy/: test_ClassicalShadow.py  test_ShadowSpectro.py  test_Spectroscopy.py
TEST/TE_PAI/: test_TE_PAI.py
TE_PAI/: TE_PAI.py  __init__.py  pai.py  sampling.py  simulator.py
TE_PAI_Shadow_Spectroscopy/: Fast_TE_PAI_Shadow_Spectroscopy.py  TE_PAI_Shadow_Spectroscopy.py  __init__.py
tools_box/: data_file_functions.py  plots_functions.py  quantum_tools.py
