[tool.poetry]
name = "pai-shadow-spectroscopy"
version = "0.1.0"
description = "Energy Gap Estimation of Hamiltonian by using Probabilistic Angle Interpolation and Shadow Spectroscopy"
authors = ["Pages Hugo <hugo.pages@etu.unistra.fr>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/hugopgs/Frontier_Lab"
repository = "https://github.com/hugopgs/Frontier_Lab"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "3.9.2"
multiprocess = "0.70.17"
numba = "0.60.0"
qiskit = "^1.2.4"
qiskit-aer = "0.15.1"
qiskit-ibm-runtime = "0.31.0"
scipy = "1.14.1"
tqdm = "4.66.5"
statsmodels = "^0.14.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"